- Changed the text of the menu for Switch to JS and High contrast. - The Skip to JS editor menu is now always shown, but the focus is still not given to monaco. - Fixed a bug where the focus was not given to the correct element in a modal in case of the UI was empty at a moment because of a "loading in progress" behavior.

--- a/theme/common.less
+++ b/theme/common.less
@@ -205,20 +205,6 @@ div.simframe > iframe {
     }
 }
 
-@media only screen and (max-width: @largestTabletScreen) {
-    #menubar .ui.menu {
-        height: @mobileMenuHeight !important;
-        min-height: @mobileMenuHeight !important;
-    }
-    .sandbox #menubar .ui.menu {
-        height: @sandboxMobileMenuHeight !important;
-        min-height: @sandboxMobileMenuHeight !important;
-    }
-    .ui.menu .item > i.icon {
-        margin: 0;
-    }
-}
-
 #menubar .ui.menu .item.editor-menuitem {
     background: fade(@black, 30%) !important;
     margin: calc(@mainMenuHeight/10);
